--- a/script/package.json
+++ b/script/package.json
@@ -9,9 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
+    "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^118.0.0",
     "node-fetch": "^3.3.1",
+    "openai": "^3.2.1",
     "puppeteer": "^18.2.1",
-    "youtube-captions-scraper": "^2.0.0"
+    "youtube-captions-scraper": "^2.0.0",
+    "ytdl-core": "^4.11.4"
+  },
+  "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.21"
   }
 }
